fixed issue on the <p> text align

--- a/app/assets/stylesheets/od4d_stylesheet.css
+++ b/app/assets/stylesheets/od4d_stylesheet.css
@@ -111,7 +111,6 @@ p {
 	color: #2b2b2b;
 	margin: 15px 0px 0px 0px;
 	line-height: 1.3em;
-	text-align: ;
 }
 
 b {
@@ -255,8 +254,6 @@ p.author
 	color: #666666;
 	margin: 5px 0px 0px 0px;
 	line-height: 1.3em;
-	text-align: justify;
-
 }
 
 p.category
